syntax = "proto3";

package plantr.v1;

enum VersionType {
  VERSION_TYPE_UNSPECIFIED = 0;
  VERSION_TYPE_PINNED = 1;
  VERSION_TYPE_LATEST = 2;
}

message GithubReleaseBinary {
  // RepoUrl is the URL of the git repo of the binary
  string repo_url = 1;
}

message Seed {
  oneof element {
    GithubReleaseBinary github_release_binary = 1;
  }
}

message Role {
  repeated Seed seeds = 1;
}

message Node {
  string id = 1;
  string hostname = 2;
  string public_key = 3;
  repeated string roles = 4;
}

message Config {
  map<string, Role> roles = 1;
  repeated Node nodes = 2;
}
